--- a/css/hjem.css
+++ b/css/hjem.css
@@ -1,3 +1,7 @@
+body {
+    background-color: rgb(186, 233, 252);
+}
+
 img {
     display: block;
     width: 1500px;
@@ -5,4 +9,10 @@ img {
     position: absolute;
     left: 100px;
     top: 100px;
+}
+
+article {
+    position: absolute;
+    top: 940px;
+    left: 100px;
 }
