--- a/css/hjem.css
+++ b/css/hjem.css
@@ -4,16 +4,14 @@ body {
 
 img {
     display: block;
-    width: 1500px;
-    height: auto;
+    width: 100vw;
+    height: 100vh;
     position: absolute;
-    left: 100px;
-    top: 100px;
 }
 
 article {
     position: absolute;
-    top: 940px;
+    top: 1020px;
     left: 100px;
     font-size:22px;
 }
