--- a/css/hjem.css
+++ b/css/hjem.css
@@ -11,7 +11,7 @@ img {
 
 article {
     position: absolute;
-    top: 1020px;
-    left: 100px;
+    top: 109vh;
+    left: 7vw;
     font-size:22px;
 }
