--- a/css/normal.css
+++ b/css/normal.css
@@ -1,4 +1,6 @@
 
+ 
+  
   h3 {
     margin-top: 50px;
   }
@@ -6,10 +8,10 @@
   .memory-game {
     width: 400px;
     height: 300px;
-    margin-top: 90px;
+    margin-top: 60px;
     display: flex;
     flex-wrap: wrap;
-    text-align: center;
+    
   }
 
   .memory-card {
@@ -18,8 +20,21 @@
     margin: 5px;
     position: relative;
     box-shadow: 1px 1px 1px rgba(0,0,0,.3);
+    transition: all .5s;
+    transform-style: preserve-3d;
+    transform: scale(1);
+    left: 33vw;
   }
   
+  .memory-card.flip {
+    transform: rotateY(180deg);
+  }
+  
+  .memory-card:active {
+    transform: scale(0.97);
+    transition: transform .2s;
+  }
+
   .front-face,
   .back-face {
     width: 100%;
@@ -29,3 +44,26 @@
     border-radius: 5px;
     background:beige;
   }
+
+  .front-face {
+    transform: rotateY(180deg);
+  }
+  
+  @media screen and (max-width: 750px) and (max-height: 500px) {
+    .memory-game {
+      width: 50%;
+      height: 90%;
+    }
+  
+    .memory-card {
+      width: calc(25% - 8px);
+      height: calc(33.333% - 8px);
+      margin: 4px;
+    }
+  
+    .front-face,
+    .back-face {
+      padding: 10px;
+    }
+  }
+  
