--- a/css/normal.css
+++ b/css/normal.css
@@ -1,6 +1,12 @@
 
- 
-  
+ * {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+
+
   h3 {
     margin-top: 50px;
   }
@@ -11,9 +17,10 @@
     margin-top: 60px;
     display: flex;
     flex-wrap: wrap;
-    
+    perspective: 1000px;
   }
 
+ 
   .memory-card {
     width: calc(25% - 10px);
     height: calc(33.333% - 10px);
@@ -34,17 +41,18 @@
     transform: scale(0.97);
     transition: transform .2s;
   }
-
+  
   .front-face,
   .back-face {
     width: 100%;
     height: 100%;
-    padding: 5px;
+    padding: 20px;
     position: absolute;
+    backface-visibility: hidden;
     border-radius: 5px;
-    background:beige;
+    background: beige;
   }
-
+  
   .front-face {
     transform: rotateY(180deg);
   }
