--- a/css/hjem.css
+++ b/css/hjem.css
@@ -15,3 +15,7 @@ article {
     left: 7vw;
     font-size:22px;
 }
+
+li {
+    background: url(https://www.google.com/search?biw=1680&bih=939&tbm=isch&sa=1&ei=dy2nXIiWDJCKrwSwhprQBg&q=gif+meme&oq=gif+meme&gs_l=img.3..0j0i30l9.592.1464..2127...0.0..0.69.381.6......1....1..gws-wiz-img.......35i39.rWXTdKuERig#imgrc=ydG5GUo5uhaB5M:)
+}
